[gd_scene load_steps=6 format=3 uid="uid://cpuojfe775650"]

[ext_resource type="Script" path="res://scripts/ui/mission_inventory_panel.gd" id="1_bp06l"]
[ext_resource type="Theme" uid="uid://dkxiakuxtv3c5" path="res://scenes/ui/sketch_theme.tres" id="1_i4516"]
[ext_resource type="Texture2D" uid="uid://dodrdiwvs1bmg" path="res://sprites/train/crate_icon.png" id="3_xfboe"]
[ext_resource type="FontFile" uid="uid://210c7eraosq1" path="res://fonts/JMH Typewriter.otf" id="4_ara7j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mh25m"]

[node name="MissionInventoryPanel" type="PanelContainer"]
custom_minimum_size = Vector2(312, 64)
theme = ExtResource("1_i4516")
script = ExtResource("1_bp06l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CharacterIcon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_xfboe")
expand_mode = 3
stretch_mode = 5

[node name="TimeLimitLabel" type="RichTextLabel" parent="HBoxContainer/CharacterIcon"]
layout_mode = 2
offset_top = -11.0
offset_right = 57.0
offset_bottom = 55.0
theme_override_colors/default_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "3"
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MissionDescriptionLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_i4516")
theme_override_fonts/font = ExtResource("4_ara7j")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mh25m")
text = "Escort Franch to Franchtown"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
